@@ -133,7 +133,12 @@ function instrumentUndici(agent) {
       propSpan.propagateTraceContextHeaders(
         request,
         function (req, name, value) {
-          req.addHeader(name, value);
+          if (typeof request.addHeader === 'function') {
+            req.addHeader(name, value);
+          } else if (Array.isArray(request.headers)) {
+            // undici@6.11.0 accidentally, briefly removed `request.addHeader()`.
+            req.headers.push(name, value);
+          }
         },
       );
     }
